--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/Mahyar915/FullDataAnalysisProject">Tableau Dashboards<br />
+										<h2><a href="https://github.com/Mahyar915/FullDataAnalysisProject">Data Analysis Project (Excel + SQL + Tableau )<br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/Mahyar915/FullDataAnalysisProject" class="image fit"><img src="images/DataAnalysisFullProjectProject.jpg" alt="" /></a>
