--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-7M7N5LLZ0Q"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'G-7M7N5LLZ0Q');
+		</script>
 	</head>
+
 	<body class="is-preload">
 
 		<!-- Wrapper -->
@@ -93,7 +103,7 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/Mahyar915/FullDataAnalysisProject">Data Analysis Project(Excel + SQL + Tableau )<br />
+										<h2><a href="https://github.com/Mahyar915/FullDataAnalysisProject">Tableau Dashboards<br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/Mahyar915/FullDataAnalysisProject" class="image fit"><img src="images/DataAnalysisFullProjectProject.jpg" alt="" /></a>
@@ -157,7 +167,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Untitled</li><li>Design: <a href="https://www.linkedin.com/in/mohammadkhadar/">Mohammad Khadar</a></li></ul>
 					</div>
 
 			</div>
